feat: JVM Vector API SIMD gemm backend (gale-backend-jvm-vector)
The first real accelerator: a JVM-only optional module whose given Backend
routes level-3 products through a jdk.incubator.vector SIMD gemm. It advertises
Capability.Vectorized, so the coarse gemm seam dispatches to it above a threshold;
bring it in with `import gale.backend.jvm.vector.given`.

- VectorDenseDoubleKernel.gemm: SIMD (broadcast-alpha·A[i,k] FMA against contiguous
  lane groups of B's row, scalar tail) for the fully row-major layout; ANY strided
  or transposed operand falls back verbatim to the pure kernel. L1/L2 and syrk
  forward to pure — the design's lever is gemm.
- Adds private[gale] DoubleArray.asArray (JVM-only) so the SIMD kernel can hand the
  raw Array[Double] to DoubleVector.fromArray; invisible to userland.
- Build: root .jvmopts + the module's Test/javaOptions add --add-modules=
  jdk.incubator.vector (JDK 22 has the incubator module).
- Threshold is a 32^3 placeholder pending the measurement bead.

Two fresh-context reviews (SAFE, no correctness bugs — lane tail, submatrix bounds,
beta order, zero-dims, aliasing all traced). 17 parity tests incl. lane-boundary
sizes, seeded alpha/beta, submatrix views, random-input tolerance, and both the
transposed-operand and column-strided-C fallback legs. All modules green:
vectorBackend 17, coreJVM 365, coreJS 362, laws 30/30, interop 16, parity 29.

Also records the cross-OS constraint (#5) in the design doc: blas-ffm must discover
a CBLAS library at runtime, never hardcode macOS Accelerate.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>